# aws-sdk-cpp-scripts

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  aws-sdk-cpp-s3.spec.in  build_debs.sh.in  build_tarball.sh.in  clean_build.sh  configure.ac
debian/: Makefile.am  changelog.src  control.src  copyright  postinst  postrm  rules
debian/source/: Makefile.am  Makefile.in
